--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
     "react-spring": "^8.0.10",
+    "semantic-ui": "^2.4.2",
     "styled-components": "^4.1.3",
     "styled-theming": "^2.2.0",
     "typeface-fira-sans": "^0.0.54",
